# my_project

./: CMakeLists.txt  LICENSE  README.en.md  README.md
include/: DeviceController.h  EquipmentController.h  IMotor.h  MockMotor.h
src/: DeviceController.cpp  EquipmentController.cpp  MockMotor.cpp  main.cpp
tests/: test_device_controller.cpp
